# flecs-platformer-demo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  architecture.md  deps.nix  flake.nix  index.html  justfile  lua.cmake
.github/workflows/: ci.yaml
assets/: map.xml  tiles-debug.xml  tiles.xml  world.ldtk  world.tiled-session
data/: config.lua  cowboy.states.lua  decidueye.states.lua  emitters.lua  enemy.states.yaml  keys.lua  player.states.lua  player.states.yaml  player.yaml  script.lua
include/: components.hpp  constants.hpp  context.hpp  controller_engine.hpp  error.hpp  event_engine.hpp  event_system.hpp  game_events.hpp  interface.hpp  memory_arena.hpp  modules.hpp  observers.hpp  particle_engine.hpp  scene.hpp  scene_manager.hpp  screen.hpp  screen_manager.hpp  state_engine.hpp  systems.hpp  texture_engine.hpp  utils.hpp
include/systems/: camera.hpp  controller.hpp  physics.hpp  render_2d.hpp
internal/physics/: .clang-format  CMakeLists.txt
internal/physics/include/physics/: physics.hpp
internal/physics/src/: physics.cpp
public/: index.html  script.js  style.css
src/: clay_raylib.cpp  components.cpp  controller_engine.cpp  main.cc  main.cc.rlimgui.bak  main.cpp  main.cpp.2.bak  main.cpp.bak.2  particle_engine.cpp  scene_manager.cpp  screen_manager.cpp  state_engine.cpp  texture_engine.cpp  utils.cpp
src/interface/: game.cpp  game_GUI.cpp  game_debug_GUI.cpp  game_setup_GUI.cpp  main_menu.cpp  main_menu_GUI.cpp  setting_GUI.cpp
src/modules/: enemy.cpp  player.cpp  tile_world.cpp
src/observers/: _observers.cpp  attack.cpp  freeze_frame.cpp  game_quit.cpp  movement.cpp  observers.cpp  pause.cpp  scene_manager.cpp
src/scene/: game.cpp  game_setup.cpp  main_menu.cpp  setting.cpp
src/scene/game/: _game.cpp  enemy.cpp  game.cpp  player.cpp  tile_world.cpp
src/screen/: game.cpp  main_menu.cpp
src/systems/: _systems.cpp  animation.cpp  animation.cpp.bak  animation_states.cpp  animation_states.cpp.bak  attack.cpp  attack.cpp.bak  block.cpp  camera.cpp  controller.cpp  freeze_frame.cpp  global_events.cpp  health.cpp  knockback.cpp  movement.cpp  particles.cpp  physics.cpp  physics_sensor.cpp  render.cpp  render_2d.cpp  state.cpp  systems.cpp
src/systems/controller/: _controller.cpp  attack.cpp  dash.cpp  horizontal_movement.cpp  jump.cpp
src/systems/render/: GUI.cpp  _render.cpp  physics.cpp  rectangle.cpp  render.cpp  texture.cpp
